DuPont DevSB/src/objects/Future_Business_Development__c.object
<CustomObject>
    <fields>
        <fullName>Submitter_Email__c</fullName>
        <inlineHelpText>Please enter your external email address (ex: user@usa.dupont.com)</inlineHelpText>
        <label>Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitter_Function__c</fullName>
        <label>Submitter Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Technical</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>CR&amp;D</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitting_Organization__c</fullName>
        <description>Organization of the submitting person.</description>
        <label>Submitting Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CR&amp;D</fullName>
                </value>
                <value>
                    <fullName>DEP</fullName>
                </value>
                <value>
                    <fullName>Digital Printing</fullName>
                </value>
                <value>
                    <fullName>DPVS</fullName>
                </value>
                <value>
                    <fullName>E&amp;C China</fullName>
                </value>
                <value>
                    <fullName>E&amp;C - other</fullName>
                </value>
                <value>
                    <fullName>E&amp;C Taiwan</fullName>
                </value>
                <value>
                    <fullName>EKC</fullName>
                </value>
                <value>
                    <fullName>MCM</fullName>
                </value>
                <value>
                    <fullName>Packaging Graphics</fullName>
                </value>
                <value>
                    <fullName>PVFM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Capability__c</fullName>
        <label>Technology Capability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capabilities exist</fullName>
                </value>
                <value>
                    <fullName>Some new capabilities needed</fullName>
                </value>
                <value>
                    <fullName>Significant capability gap</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timing_to_Market__c</fullName>
        <label>Timing to Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-1 Year</fullName>
                </value>
                <value>
                    <fullName>1-3 Years</fullName>
                </value>
                <value>
                    <fullName>3-5 Years</fullName>
                </value>
                <value>
                    <fullName>5+ Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unmet_Needs_Comments__c</fullName>
        <label>Unmet Needs Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unmet_Needs__c</fullName>
        <label>Unmet Needs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significant and known by market</fullName>
                </value>
                <value>
                    <fullName>Require work to create awareness</fullName>
                </value>
                <value>
                    <fullName>Not obvious and little motivation exists</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Proposition__c</fullName>
        <label>Value Proposition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fCompany__c</fullName>
        <description>Reference to Lead.Company (this is the Company working with DuPont on this Innovation or Future Business Development)</description>
        <formula>Related_Lead__r.Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Company involved in this Future Business Development.</inlineHelpText>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fIndustry__c</fullName>
        <description>Industry segment for this project or idea (formula displays value captured in related Lead)</description>
        <formula>TEXT(Related_Lead__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Industry captured in related Lead</inlineHelpText>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fRating__c</fullName>
        <description>Rating from the Lead related to this development idea or project.</description>
        <formula>TEXT(Related_Lead__r.Rating)</formula>
        <inlineHelpText>Rating from the Lead related to this development idea or project.</inlineHelpText>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <label>Future Business Development</label>
    <nameField>
        <displayFormat>FBD-{000000}</displayFormat>
        <label>Future Business Development ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Future Business Developments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>